--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
     "@types/jest": "^26.0.14",
+    "compare-versions": "^3.6.0",
     "husky": ">=4",
     "jest": "^26.4.2",
     "lint-staged": ">=10",
