--- a/package.json
+++ b/package.json
@@ -53,13 +53,13 @@
     ]
   },
   "dependencies": {
-    "@suin/is-object": "^1.1.3",
-    "@suin/typed-event-emitter": "^1.0.0"
+    "@suin/is-object": "^1.1.3"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
+    "@suin/typed-event-emitter": "^1.0.0",
     "@types/jest": "^26.0.14",
     "compare-versions": "^3.6.0",
     "husky": ">=4",
