--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     ]
   },
   "dependencies": {
-    "@suin/is-object": "^1.1.3"
+    "@suin/is-object": "^1.1.3",
+    "ws": "^7.3.1"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^5.0.1",
@@ -61,6 +62,7 @@
     "@semantic-release/git": "^9.0.0",
     "@suin/typed-event-emitter": "^1.0.0",
     "@types/jest": "^26.0.14",
+    "@types/ws": "^7.2.7",
     "compare-versions": "^3.6.0",
     "husky": ">=4",
     "jest": "^26.4.2",
